--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 		<title>Agentes Equipo de Fútbol</title>
 	</head>
 	<body>
-		<div id="app"></div>
+		<div id="app">
+			<h1>Juego Fútbol</h1>
+		</div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
