Timer de 3 minutos y fondo de la página Co-authored-by: Axel García <axlserial@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="goals">0</div>
 				<div class="team-name right">Los Chicken Little</div>
 			</div>
-			<button type="button">Iniciar</button>
+			<button type="button" id ="iniciar" >Iniciar</button>
 			<small>La duración de los partidos es de 3 minutos.</small>
 		</div>
 	</div>
