--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<p id="timer">00:00</p>
 			<div id="score">
 				<div class="team-name">Gallos Claudio</div>
-				<div class="goals">0</div>
-				<div class="goals">0</div>
+				<div class="goals" id="left-goals">0</div>
+				<div class="goals" id="right-goals">0</div>
 				<div class="team-name right">Los Chicken Little</div>
 			</div>
 			<button type="button" id="iniciar">Iniciar</button>
